--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  margin:10px auto;
 }
 
 .App-logo {
@@ -29,4 +30,11 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.counterContainer{
+
+ text-align: center;
+
+ padding:16px;
 }
